# gin/dto/UserUpdateDTO.go
@@ -1,0 +1,6 @@
+package dto
+
+type UserUpdateDTO struct {
+	ID int `json:"id"`
+	UserCreateDTO
+}
